--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mongoose": "^5.9.24",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
